[package]
name = "room-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.1"
log = "0.4.20"
mockall = "0.11.4"
paho-mqtt = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["sync"] }

[target.'cfg(target_os = "linux")'.dependencies]
bme280 = "0.4.4"
linux-embedded-hal = "0.4.0-alpha.2"
